added role based on project, fixed role assignments